[package]
name = "sumher_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
glob = "0.3.1"
ndarray = "0.15.6"
polars = { version = "0.35.4", features = ["lazy", "ndarray", "performant"] }

[build-dependencies]
cc = "1.0.83"
