[package]
name = "sumher_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = [ "derive", "suggestions", "unstable-doc" ] }
csv = "1.3.0"
futures = "0.3.29"
glob = "0.3.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
ndarray = "0.15.6"
num_cpus = "1.16.0"
polars = { version = "0.35.4", features = ["lazy", "ndarray", "performant", "sign"] }
rayon = "1.8.0"
serde = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }

[build-dependencies]
cc = "1.0.83"
